# ChatProject

./: .gitignore  CMakeLists.txt  README.md  appcontroller.cpp  appcontroller.h  dependencies.h  listener.h  main.cpp  message.cpp  message.h  networktypes.h  server.cpp  session.cpp  session.h  sessions_manager.cpp  sessions_manager.h
client/: CMakeLists.txt  appcontroller.cpp  appcontroller.h  cryptoservice.cpp  cryptoservice.h  main.cpp  messagehandler.cpp  messagehandler.h  networktypes.h  resources.qrc  securebuffer.h  styles.qss  uitypes.h
client/assets/: styles.qss
client/models/: approles.h  chatdelegate.cpp  contactiemdelegate.cpp  contactiemdelegate.h  contactlistmodel.cpp  contactlistmodel.h  messagedelegate.cpp  messageviewmodel.cpp  messageviewmodel.h
client/network/: networkclient.cpp  networkclient.h
client/src/: main.cpp
client/src/core/: appcontroller.cpp  appcontroller.h
client/src/crypto/: cryptoservice.cpp  cryptoservice.h  securebuffer.h
client/src/models/: approles.h  chatviewmodel.cpp  chatviewmodel.h  messagedelegate.cpp  messagedelegate.h  messageviewmodel.cpp  messageviewmodel.h  searchviewmodel.h
client/src/network/: networkclient.cpp  networkclient.h
client/src/types/: networktypes.h  uitypes.h
client/src/ui/: loginpage.h  mainpage.cpp  mainpage.h  mainpage.ui  mainwindow.cpp  mainwindow.h  profilepopup.h  registrationpage.h  registrationpage.ui
client/ui/: loginpage.cpp  loginpage.h  loginpage.ui  mainpage.cpp  mainpage.h  mainpage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  profilepopup.cpp  profilepopup.h  profilepopup.ui  registrationpage.cpp  registrationpage.h  registrationpage.ui
database/: databasemanager.cpp  databasemanager.h  databasemessage.cpp  databasemessage.h
db/: db_init.sql
models/: approles.h  chatdelegate.cpp  chatdelegate.h  chatroles.h  chatstructuremodel.cpp  chatstructuremodel.h  contact.h  contactiemdelegate.h  contactlistmodel.cpp  contactlistmodel.h  contactlistmodel1.cpp  contactlistmodel1.h  messagedelegate.cpp  messageitemdelegate.cpp  messageitemdelegate.h  messageslistmodel.cpp  messageslistmodel.h  messageviewmodel.cpp  messageviewmodel.h  searchviewmodel.cpp  searchviewmodel.h
network/: message.cpp  message.h  networkclient.cpp  networkclient.h
server/: CMakeLists.txt  CMakePresets.json
server/db/: db_init.sql
server/src/: database.cpp  database.hpp  db_protocol.cpp  db_protocol.hpp  listener.cpp  listener.hpp  server.cpp  server_protocol.cpp  server_protocol.hpp  session.cpp  session.hpp  sessions_manager.cpp  sessions_manager.hpp
server/src/core/: sessions_manager.cpp  sessions_manager.hpp
server/src/database/: database.cpp  database.hpp  db_protocol.hpp
server/src/network/: listener.cpp  listener.hpp  session.cpp  session.hpp
server/src/protocol/: mappers.hpp  models.hpp  requests.hpp  responses.hpp  server_protocol.cpp
src/: database.cpp  database.h  database.hpp  db_protocol.cpp  db_protocol.h  db_protocol.hpp  dbworker.cpp  dbworker.h  dbworker.hpp  dependencies.hpp  listener.cpp  listener.h  message.cpp  message.h  message.hpp  server.cpp  server.hpp  server_protocol.cpp  server_protocol.h  server_protocol.hpp  session.cpp  session.h  session.hpp  sessions_manager.cpp  sessions_manager.h  sessions_manager.hpp
ui/: addcontactpopup.cpp  addcontactpopup.h  addcontactpopup.ui  contactmodelwidget.cpp  contactmodelwidget.h  contactmodelwidget.ui  contactwidget.cpp  contactwidget.h  contactwidget.ui  mainpage.cpp  mainpage.h  mainpage.ui  mainpagewidget.cpp  mainpagewidget.h  mainpagewidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageitemwidget.cpp  messageitemwidget.h  messageitemwidget.ui  registerwidget.cpp  registerwidget.h  registerwidget.ui  registrationpage.h  requestitemwidget.cpp  requestitemwidget.h  requestitemwidget.ui  requestlistoverlay.cpp  requestlistoverlay.h  requestlistoverlay.ui
